--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -6,9 +6,10 @@
             <div class="col">
                 <h1 class="mt-5">Test microservices</h1>
                 <hr>
-                <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">
-                    Test Broker
-                </a>
+                <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker</a>
+                <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth</a>
+                <a id="logBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Log</a>
+
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
                     <span class="text-muted">Output shows here...</span>
                 </div>
@@ -34,30 +35,102 @@
 {{define "js"}}
     <script>
         let brokerBtn = document.getElementById("brokerBtn");
-		let output = document.getElementById("output");
-		let sent = document.getElementById("payload");
-		let received = document.getElementById("received")
+        let authBrokerBtn = document.getElementById("authBrokerBtn");
+        let logBtn = document.getElementById("logBtn");
+        let output = document.getElementById("output");
+        let sent = document.getElementById("payload");
+        let received = document.getElementById("received");
 
-        brokerBtn.addEventListener("click", function() {
-			const body = {
-				method: 'POST'
+        logBtn.addEventListener("click", function() {
+            const payload = {
+                action: "log",
+                log: {
+                    name: "event",
+                    data: "Some kind of data",
+                }
             }
 
-			fetch("http:\/\/localhost:8080", body)
-                .then(response => response.json())
-                .then(data => {
-					sent.innerHTML = 'empty post request'
+            const headers = new Headers();
+            headers.append("Content-Type", "application/json");
+
+            const body = {
+                method: "POST",
+                body: JSON.stringify(payload),
+                headers: headers,
+            }
+
+            fetch("http:\/\/localhost:8080/handle", body)
+                .then((response) => response.json())
+                .then((data) => {
+                    sent.innerHTML = JSON.stringify(payload, undefined, 4);
                     received.innerHTML = JSON.stringify(data, undefined, 4);
-					if (data.error) {
-						console.log(data.message)
+                    if (data.error) {
+                        output.innerHTML += `<br><strong>Error:</strong> ${data.message}`;
                     } else {
-						output.innerHTML += `<br><strong>Response from broker service</strong>: ${data.message}`
+                        output.innerHTML += `<br><strong>Response from broker service</strong>: ${data.message}`;
                     }
                 })
-                .catch(error => {
-                    output.innerHTML += `<br><strong>Error</strong>: ${error}`
-                });
+                .catch((error) => {
+                    output.innerHTML += "<br><br>Eror: " + error;
+                })
+        })
 
-        });
+        authBrokerBtn.addEventListener("click", function() {
+
+            const payload = {
+                action: "auth",
+                auth: {
+                    email: "admin@example.com",
+                    password: "verysecret",
+                }
+            }
+
+            const headers = new Headers();
+            headers.append("Content-Type", "application/json");
+
+            const body = {
+                method: 'POST',
+                body: JSON.stringify(payload),
+                headers: headers,
+            }
+
+            fetch("http:\/\/localhost:8080/handle", body)
+                .then((response) => response.json())
+                .then((data) => {
+                    sent.innerHTML = JSON.stringify(payload, undefined, 4);
+                    received.innerHTML = JSON.stringify(data, undefined, 4);
+                    if (data.error) {
+                        output.innerHTML += `<br><strong>Error:</strong> ${data.message}`;
+                    } else {
+                        output.innerHTML += `<br><strong>Response from broker service</strong>: ${data.message}`;
+                    }
+                })
+                .catch((error) => {
+                    output.innerHTML += "<br><br>Error: " + error;
+                })
+        })
+
+        brokerBtn.addEventListener("click", function() {
+
+            const body = {
+                method: 'POST',
+            }
+
+            fetch("http:\/\/localhost:8080", body)
+                .then((response) => response.json())
+                .then((data) => {
+                    sent.innerHTML ="empty post request";
+                    received.innerHTML = JSON.stringify(data, undefined, 4);
+                    if (data.error) {
+                        console.log(data.message);
+                    } else {
+                        output.innerHTML += `<br><strong>Response from broker service</strong>: ${data.message}`;
+                    }
+                })
+                .catch((error) => {
+                    output.innerHTML += "<br><br>Eror: " + error;
+                })
+        })
+
     </script>
 {{end}}
